# winter-supplement-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yaml
tests/: test_engine.py  test_rules.py
winter_supplement_engine/: config.py  engine.py  rules.py
